fixed white space underneath footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3331,3 +3331,11 @@ input, select, textarea {
 	height: 200px;
 	width: 200px;
 }
+
+body {
+	height: 100vh;
+}
+
+#main {
+	height: 100vh;
+}
